alignment fixed!

--- a/template/All-blogs/css/allblogs.css
+++ b/template/All-blogs/css/allblogs.css
@@ -72,3 +72,9 @@
 }
 
 .noblog-alert h1{margin: 0;font-family: 'PT Sans', sans-serif; font-size: 16px;}
+.box small {
+    height: 30px;
+    overflow: hidden;
+    width: 100%;
+    display: block;
+}
